@@ -2425,9 +2425,6 @@ Left subscripts and tensors.
      mkdir -p \TEXMFTEXivBIN || exit 1
      ;
      mv \XTPIPES tex4ht.jar \TEXMFTEXivBIN . 
-     ;
-     cp \XTPIPES lib/* 
-        \TEXMFTEXivXTPIPES .
 "}}
 
 
