@@ -13,7 +13,7 @@
 
 \input{common}
 \input{tex4ht-cpright}
-
+\input{tex4ht-dir}
 
 %%%%%%%%%%%%%%%%%%
 \part{Post Processing for Html Output Mode}
@@ -635,9 +635,6 @@ OK 2
      mv tex4ht.jar \TEXMFTEXivBIN
      ;
      if [ ! -d \TEXMFTEXivXTPIPES\space]; then exit 1; fi
-     ;
-     cp \XTPIPES xtpipes/lib/* 
-        \TEXMFTEXivXTPIPES
 "}}
 
 \end{document}
